<resources>
    <string name="app_name" translatable="false">ShoppingList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="newButton">New</string>
    <string name="newItemButton">New Item</string>
    <string name="backButton">Back</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name:</string>
    <string name="unit">Unit:</string>
    <string name="nameInput">Name of the item</string>
    <string name="unitInput">Unit</string>
    <string name="addItemButton">Add Item</string>
    <string name="addItemText">Add New Item</string>
    <string name="deleteListButton">Delete</string>
    <string name="deleteListMessage">Delete list %1$s ?</string>
    <string name="dialogConfirm">Confirm</string>
    <string name="dialogCancel">Cancel</string>

    <item name="textview" type="id"/>
</resources>